--- a/_vendor/uswds/stylesheets/utilities/rules/overflow.scss
+++ b/_vendor/uswds/stylesheets/utilities/rules/overflow.scss
@@ -16,7 +16,7 @@ example:
 
 $overflow: (
   overflow: (
-    base: 'outline',
+    base: 'overflow',
     modifiers: (
       'y': '-y',
       'x': '-y',
